--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,11 @@ h1 {
   .quote {
     font-size: 4rem;
   }
+  .typeOfSource {
+    font-size: 4rem; 
+
+  }
+
 
   .quote:before,
   .quote:after {
