--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ h1 {
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   border: 2px solid rgba(0, 0, 0, 0.3);
-  transition: 0.5s;
+  transition: 0.1s;
   text-align: center;
   margin: auto; 
   position: relative; 
@@ -52,8 +52,9 @@ h1 {
 }
 
 .container {
-  width: 90%;
-  max-width: 1024px;
+  float: right; 
+  width: 60%;
+  max-width: 50%;
   margin: auto;
   padding: 5px;
 }
@@ -69,18 +70,22 @@ h1 {
 }
 
 .quote {
-  font-size: 2rem;
-  font-weight: 400;
+  font-size: 1 rem;
+  font-weight: 300;
   line-height: 1.2;
   position: relative;
   margin: 0;
   margin-left: 10px;
 }
-
+.photo {
+  float: left; 
+  width: 40%;
+   
+}
 .quote:before,
 .quote:after {
-  font-size: 3rem;
-  line-height: 2.5rem;
+  font-size: 2 rem;
+  line-height: 2 rem;
   position: absolute;
 }
 
@@ -103,11 +108,6 @@ h1 {
   line-height: 1.1;
   margin-right: 1em; 
 }
-
-.source:before {
-  
-}
-
 
 .citation {
   font-style: italic;
@@ -153,14 +153,14 @@ h1 {
     font-size: 4rem;
   }
   .typeOfSource {
-    font-size: 4rem; 
+    font-size: 1rem; 
 
   }
 
 
   .quote:before,
   .quote:after {
-    font-size: 6rem;
+    font-size: 3rem;
   }
 
   .quote:before {
@@ -174,4 +174,11 @@ h1 {
   .source {
     font-size: 1.25rem;
   }
-}
+
+  .button {
+    font-size: 6rem; 
+    float: center; 
+    margin: 100px; 
+    width: 25%; 
+
+  }
